--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,8 +5,8 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Building master'
-				sh javac HelloWorld.java
-				sh java HelloWorld
+				javac HelloWorld.java
+				java HelloWorld
             }
         }
         stage('Test') {
